--- a/dev/react/src/scss/components/stickyActionsHomeTrial.css
+++ b/dev/react/src/scss/components/stickyActionsHomeTrial.css
@@ -1,5 +1,9 @@
 .sticky-actions-homeTrial.sticky-actions-open .stickyActions-form {
-  top: -374px; }
+  top: -380px;
+  min-height: 380px; }
+
+.sticky-actions-homeTrial.sticky-actions-statusChange .stickyActions-form {
+  top: -252px; }
 
 .sticky-actions-homeTrial .updatePicker {
   margin-bottom: 1em; }
@@ -12,6 +16,9 @@
   .sticky-actions-homeTrial .updatePicker .updatePicker-save {
     margin: 0;
     background: #2671d4; }
+
+.sticky-actions-homeTrial .homeTrial-changeStatus-dropdown {
+  margin-bottom: 1em; }
 
 .sticky-actions-homeTrial .button {
   width: 120px;
