get customer initials and display them in the customer info component

--- a/dev/react/src/scss/base/5_helper.scss
+++ b/dev/react/src/scss/base/5_helper.scss
@@ -16,8 +16,9 @@
 	}
 }
 
-//A circular container for icons 
+//A circular container for icons
 .icon-container{
+    text-transform: uppercase;
 	border-radius: 50%;
 	display: inline-block;
 	text-align: center;
