--- a/dev/react/src/scss/base/5_helper.css
+++ b/dev/react/src/scss/base/5_helper.css
@@ -65,6 +65,7 @@
     display: none; } }
 
 .icon-container {
+  text-transform: uppercase;
   border-radius: 50%;
   display: inline-block;
   text-align: center;
