--- a/dev/react/src/scss/base/general.css
+++ b/dev/react/src/scss/base/general.css
@@ -296,6 +296,7 @@ p {
   border-radius: 50%;
   border: 1px solid #e8e9e9;
   text-align: center;
+  text-transform: uppercase;
   height: 80px;
   line-height: 80px;
   width: 80px;
