--- a/dev/react/src/scss/components/header.css
+++ b/dev/react/src/scss/components/header.css
@@ -68,7 +68,7 @@
     margin-left: 30px;
     border: none; }
   .nav-container .burger-container {
-    position: fixed;
+    position: absolute;
     right: 30px;
     top: 18px; }
     @media (min-width: 768px) {
