fixes for sticky actions on home trials - hide the button not currently associated with the open panel so submission works as expected

--- a/dev/react/src/scss/components/stickyActionsHomeTrial.css
+++ b/dev/react/src/scss/components/stickyActionsHomeTrial.css
@@ -25,3 +25,9 @@
   height: 48px;
   margin-left: 1em;
   clear: both; }
+
+.sticky-actions.sticky-actions-updateDate .btn-updateStatus {
+  visibility: hidden; }
+
+.sticky-actions-statusChange .btn-updateDate {
+  display: none; }
