--- a/dev/react/src/scss/components/stickyActionsHomeTrial.scss
+++ b/dev/react/src/scss/components/stickyActionsHomeTrial.scss
@@ -50,3 +50,17 @@ $approveColor : $color-green;
     clear: both;
   }
 }
+
+
+
+.sticky-actions.sticky-actions-updateDate {
+    .btn-updateStatus {
+      visibility: hidden;
+    }
+  }
+
+.sticky-actions-statusChange {
+  .btn-updateDate {
+    display: none;
+  }
+}
