--- a/dev/react/src/scss/components/orderStatus.css
+++ b/dev/react/src/scss/components/orderStatus.css
@@ -1,10 +1,10 @@
 .status {
   border: 1px solid;
-  border-radius: 5px;
+  border-radius: 3px;
   text-align: center;
-  line-height: 32px;
   display: inline-block;
-  padding: 0 12px; }
+  padding: 2px 4px;
+  font-size: 12px; }
 
 .status-complete {
   color: #34d9ba; }
