--- a/dev/react/src/scss/components/createCustomer.scss
+++ b/dev/react/src/scss/components/createCustomer.scss
@@ -8,4 +8,30 @@
   .form-element {
     margin-bottom: 2.5em;
   }
+
+  .row .create-customer-initials,
+  .row .create-customer-form {
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-top: 10%;
+  }
+
+  .create-customer-initials {
+    text-align: center;
+  }
+
+  .create-customer-right {
+    border-right: 1px solid #e8e9e9;
+  }
+
+  .create-customer-form {
+    width: 90%;
+  }
+
+  .address-finder {
+    .postcode-lookup {
+      margin-bottom: 1em;
+    }
+  }
+
 }
