--- a/dev/react/src/scss/components/stickyActionsHomeTrial.css
+++ b/dev/react/src/scss/components/stickyActionsHomeTrial.css
@@ -1,4 +1,4 @@
-.sticky-actions-homeTrial.sticky-actions-open .stickyActions-form {
+.sticky-actions-homeTrial.sticky-actions-true .stickyActions-form {
   top: -380px;
   min-height: 380px; }
 
