--- a/dev/react/src/scss/components/stickyActionsHomeTrial.scss
+++ b/dev/react/src/scss/components/stickyActionsHomeTrial.scss
@@ -6,7 +6,7 @@ $approveColor : $color-green;
 
 .sticky-actions-homeTrial {
 
-  &.sticky-actions-open{
+  &.sticky-actions-true{
     .stickyActions-form {
       top: -380px;
       min-height: 380px;
